change admin panel min size to stop panel from collapsing

--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -45,7 +45,7 @@
 		font-variant-caps: all-small-caps;
 		max-width: 100%;
 		display: inline-flex;
-		min-width: 980px;
+		min-width: 1084px;
 		font-size: large;
 	}
 
